--- a/ZaolisUI/Settings.xaml
+++ b/ZaolisUI/Settings.xaml
@@ -10,7 +10,7 @@
         <!--Button close-->
         <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
             <Label Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">Settings</Label>
-            <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" ></Button>
+            <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" Click="buttonClose_Click" ></Button>
 
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
