--- a/ZaolisUI/UserInfo.xaml
+++ b/ZaolisUI/UserInfo.xaml
@@ -10,8 +10,8 @@
     <DockPanel>
         <!--Button close-->
         <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
-        <Label Margin="0,10,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">User Info</Label>
-            <Button Name="buttonClose" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" ></Button>
+            <Label Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">User Info</Label>
+            <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" Click="buttonClose_Click" ></Button>
 
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
