--- a/ZaolisUI/MainMenuZaolis.xaml
+++ b/ZaolisUI/MainMenuZaolis.xaml
@@ -44,10 +44,8 @@
         <Grid x:Name="MainGridLow">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="45*" MinWidth="20"/>
-                <ColumnDefinition Width="250*" MaxWidth="500" MinWidth="60"/>
-                <ColumnDefinition Width="250*"/>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="771*"/>
+                <ColumnDefinition Width="250*" MaxWidth="500" MinWidth="60"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
@@ -55,7 +53,7 @@
             </Grid.RowDefinitions>
 
 
-            <Grid x:Name="GridBackground" Background="#55313131" Opacity="0"  Grid.RowSpan="2" Grid.ColumnSpan="4">
+            <Grid x:Name="GridBackground" Background="#55313131" Opacity="0" Grid.RowSpan="2" Grid.ColumnSpan="4">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="47*"/>
                     <RowDefinition Height="545*"/>
@@ -63,7 +61,7 @@
             </Grid>
             <!--Top Line-->
             <DockPanel x:Name="TopGrid" MouseDown="TopGrid_MouseDown" Grid.ColumnSpan="4" Background="#FF2196F3">
-                <DockPanel LastChildFill="False"  Margin="10,0">
+                <DockPanel LastChildFill="False" Margin="10,0">
                     <Button DockPanel.Dock="Right" x:Name="ButtonClose" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="25" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="ButtonClose_Click" >
                         <materialDesign:PackIcon Kind="Close"/>
                     </Button>
@@ -94,12 +92,12 @@
                                 </Ellipse>
                                 <DockPanel DockPanel.Dock="Right">
                                     <TextBlock Margin="0,5,0,0" DockPanel.Dock="Top">
-                        <Run Text="14:23" FontSize="14"></Run></TextBlock>
+<Run Text="14:23" FontSize="14"></Run></TextBlock>
                                     <Border Visibility="Hidden" DockPanel.Dock="Right" Background="#FF2196F3" CornerRadius="10" Width="25" Height="22">
                                         <Label Foreground="White" HorizontalAlignment="Center" FontSize="12" VerticalAlignment="Center">1</Label>
                                     </Border>
                                     <!--<TextBlock Margin="0,0" DockPanel.Dock="Right"> <Run Text="1" FontSize="12" Foreground="#FF727272" ></Run>
-                                </TextBlock>-->
+</TextBlock>-->
                                 </DockPanel>
                                 <DockPanel DockPanel.Dock="Top" LastChildFill="False">
                                     <TextBlock DockPanel.Dock="Top" Margin="10,5,0,0"> <Run Text="{Binding Name, Mode=OneWay}" FontSize="14" FontWeight="Bold"></Run></TextBlock>
@@ -116,36 +114,37 @@
             <!--Chat-->
             <DockPanel Grid.Row="1" LastChildFill="False" Grid.Column="2">
                 <!--<DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
-                <Button FontSize="40" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Left" Background="{x:Null}" BorderBrush="{x:Null}">
-                    <materialDesign:PackIcon Kind="Attachment" />
-                </Button>
-                <TextBox Style="{x:Null}" BorderBrush="{x:Null}" MinWidth="600"></TextBox>
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Right" BorderBrush="{x:Null}" Background="{x:Null}">
-                    <materialDesign:PackIcon Kind="MicNone" />
-                </Button>
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Right" Background="{x:Null}" BorderBrush="{x:Null}">
-                   
-                    <materialDesign:PackIcon Kind="StickerOutline" />
-                </Button>
-            </DockPanel>-->
+<Button FontSize="40" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Left" Background="{x:Null}" BorderBrush="{x:Null}">
+<materialDesign:PackIcon Kind="Attachment" />
+</Button>
+<TextBox Style="{x:Null}" BorderBrush="{x:Null}" MinWidth="600"></TextBox>
+<Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Right" BorderBrush="{x:Null}" Background="{x:Null}">
+<materialDesign:PackIcon Kind="MicNone" />
+</Button>
+<Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="25" Height="25" DockPanel.Dock="Right" Background="{x:Null}" BorderBrush="{x:Null}">
+<materialDesign:PackIcon Kind="StickerOutline" />
+</Button>
+</DockPanel>-->
                 <!--<Grid DockPanel.Dock="Bottom" Height="35">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="49*"/>
-                        <ColumnDefinition Width="627*"/>
-                        <ColumnDefinition Width="96*"/>
-                    </Grid.ColumnDefinitions>
-                    --><!--<Button Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Attachment}"></Button>-->
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="49*"/>
+<ColumnDefinition Width="627*"/>
+<ColumnDefinition Width="96*"/>
+</Grid.ColumnDefinitions>
+-->
+                <!--<Button Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Attachment}"></Button>-->
 
-                    <!--<TextBox FontSize="14" materialDesign:HintAssist.Hint="Write message" Grid.Column="1"></TextBox>
-                    <Grid Grid.Column="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="1" Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Send}" Margin="9,2,9,0" VerticalAlignment="Top" Click="Button_Click" ></Button>
-                        <Button Style="{StaticResource MaterialDesignIconButton}" Background="{x:Null}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=StickerOutline}" ></Button>
-                    </Grid>--><!--
-                </Grid>-->
+                <!--<TextBox FontSize="14" materialDesign:HintAssist.Hint="Write message" Grid.Column="1"></TextBox>
+<Grid Grid.Column="2">
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="1*"/>
+<ColumnDefinition Width="1*"/>
+</Grid.ColumnDefinitions>
+<Button Grid.Column="1" Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Send}" Margin="9,2,9,0" VerticalAlignment="Top" Click="Button_Click" ></Button>
+<Button Style="{StaticResource MaterialDesignIconButton}" Background="{x:Null}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=StickerOutline}" ></Button>
+</Grid>-->
+                <!--
+</Grid>-->
 
             </DockPanel>
 
@@ -166,7 +165,6 @@
                             <ImageBrush ImageSource="{Binding ImagePath}" Stretch="Fill"></ImageBrush>
                         </Ellipse.Fill>
                     </Ellipse>
-                    
                 </DockPanel>
                 <DockPanel LastChildFill="False" DockPanel.Dock="Top">
                     <Expander DockPanel.Dock="Top" Header="{Binding CurrentUser.Name}">
