--- a/ZaolisUI/MainMenuZaolis.xaml
+++ b/ZaolisUI/MainMenuZaolis.xaml
@@ -160,7 +160,7 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
                 </DockPanel.RenderTransform>
                 <DockPanel DockPanel.Dock="Top" Margin="20,20,5,10">
                     <Button x:Name="ButtonCloseMenu" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" ></Button>
-                    <Ellipse DockPanel.Dock="Top" HorizontalAlignment="Left" Height="60" Width="60" Stroke="#FF013355" StrokeThickness="1">
+                    <Ellipse DockPanel.Dock="Top" HorizontalAlignment="Left" Height="45" Width="45" Stroke="#FF013355" StrokeThickness="1">
                         <Ellipse.Fill>
                             <ImageBrush ImageSource="{Binding ImagePath}" Stretch="Fill"></ImageBrush>
                         </Ellipse.Fill>
@@ -168,12 +168,12 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
                 </DockPanel>
                 <DockPanel LastChildFill="False" DockPanel.Dock="Top">
                     <Expander DockPanel.Dock="Top" Header="{Binding CurrentUser.Name}">
-                        <ListBox x:Name="logginedUsers" ItemsSource="{Binding users}">
+                        <ListBox x:Name="logginedUsers" ItemsSource="{Binding users}" SelectionChanged="logginedUsers_SelectionChanged">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <DockPanel LastChildFill="False">
                                         <!--Photo-->
-                                        <Ellipse Height="45" Width="45" Stroke="#FF013355" StrokeThickness="1">
+                                        <Ellipse Height="30" Width="30" Stroke="#FF013355" StrokeThickness="1">
                                             <Ellipse.Fill>
                                                 <ImageBrush ImageSource="{Binding ImagePath}" Stretch="Fill"></ImageBrush>
                                             </Ellipse.Fill>
@@ -181,8 +181,7 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
                                         <DockPanel DockPanel.Dock="Right">
                                         </DockPanel>
                                         <DockPanel DockPanel.Dock="Top" LastChildFill="False">
-                                            <TextBlock DockPanel.Dock="Left" Margin="10,11,0,0"> <Run Text="{Binding Name}" FontSize="14" FontWeight="Bold"></Run></TextBlock>
-                                            <materialDesign:PackIcon Visibility="Visible" Margin="10,0,0,0" DockPanel.Dock="Bottom" Foreground="#FF2196F3" Kind="CheckboxMarkedCircle" Background="{x:Null}" />
+                                            <TextBlock DockPanel.Dock="Left" Margin="10,11,0,14"> <Run Text="{Binding Name}" FontSize="16" FontWeight="Bold"></Run></TextBlock>
                                         </DockPanel>
                                     </DockPanel>
 
