--- a/ZaolisUI/GroupInfo.xaml
+++ b/ZaolisUI/GroupInfo.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ZaolisUI" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="496" d:DesignWidth="325" MinWidth="250" Background="White">
+             d:DesignHeight="496" d:DesignWidth="325" MinWidth="250">
     <DockPanel>
         <Grid Background="Transparent">
             <Grid.RowDefinitions>
