--- a/ZaolisUI/MainMenuZaolis.xaml
+++ b/ZaolisUI/MainMenuZaolis.xaml
@@ -6,7 +6,7 @@ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 xmlns:local="clr-namespace:ZaolisUI"
 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 mc:Ignorable="d"
-Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Window_Closing">
+Title="MainMenuZaolis" MinHeight="450" MinWidth="650" Height="600" Width="1040" WindowStyle="None" Closing="Window_Closing">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="0"/>
     </WindowChrome.WindowChrome>
@@ -43,9 +43,9 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
     <Grid x:Name="MainGrid">
         <Grid x:Name="MainGridLow">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="45*" MinWidth="20"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="250*" MaxWidth="500" MinWidth="60"/>
+                <ColumnDefinition Width="45*" MinWidth="250"/>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="250*" MinWidth="250"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
@@ -150,6 +150,8 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
             </DockPanel>
 
             <!--Left Menu Animated-->
+
+                
             <DockPanel x:Name="GridMenu" Width="250" HorizontalAlignment="Left" Margin="-250 0 0 0" Background="White" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
                 <DockPanel.RenderTransform>
                     <TransformGroup>
@@ -167,7 +169,7 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
                         </Ellipse.Fill>
                     </Ellipse>
                 </DockPanel>
-                <DockPanel LastChildFill="False" DockPanel.Dock="Top">
+                    <DockPanel LastChildFill="False" DockPanel.Dock="Top">
                     <Expander DockPanel.Dock="Top" Header="{Binding CurrentUser.Name}">
                         <ListBox x:Name="logginedUsers" ItemsSource="{Binding users}" SelectionChanged="logginedUsers_SelectionChanged">
                             <ListBox.ItemTemplate>
@@ -185,51 +187,55 @@ Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Win
                                             <TextBlock DockPanel.Dock="Left" Margin="10,11,0,14"> <Run Text="{Binding Name}" FontSize="16" FontWeight="Bold"></Run></TextBlock>
                                         </DockPanel>
                                     </DockPanel>
-
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>
                     </Expander>
-                    <Button Width="250" Height="50" Name="buttonAddAccount" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonAddAccount_Click">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="AccountAdd" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <Label DockPanel.Dock="Top" Margin="35,0,0,0">Add Account</Label>
+                    <ScrollViewer >
+                        <DockPanel LastChildFill="False">
+                        <Button Width="250" Height="50" Name="buttonAddAccount" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonAddAccount_Click">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="AccountAdd" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <Label DockPanel.Dock="Top" Margin="35,0,0,0">Add Account</Label>
+                            </DockPanel>
+                        </Button>
+                        <Separator Margin="0,10" DockPanel.Dock="Top"></Separator>
+                        <Button Width="250" Height="50" Name="buttonFindFriend" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonFindFriend_Click">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="AccountSearch" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <Label DockPanel.Dock="Top" Margin="35,0,0,0">Find Friends</Label>
+                            </DockPanel>
+                        </Button>
+                        <Button Width="250" Height="50" Name="buttonCreateNewChat" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="AccountMultiple" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <Label DockPanel.Dock="Top" Margin="35,0,0,0">New Group</Label>
+                            </DockPanel>
+                        </Button>
+                        <Button Width="250" Height="50" Name="buttonSettings" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonSettings_Click">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="Settings" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <Label DockPanel.Dock="Top" Margin="35,0,0,0">Settings</Label>
+                            </DockPanel>
+                        </Button>
+                        <Button Width="250" Height="50" Name="buttonNightMode" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonNightMode_Click">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="WeatherNight" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <ToggleButton Name="toggleButtonNightMode" DockPanel.Dock="Right"></ToggleButton>
+                                <Label DockPanel.Dock="Left" Margin="35,0,0,0">Night Mode</Label>
+                            </DockPanel>
+                        </Button>
+                        <Button Width="250" Height="50" Name="buttonLogout" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Bottom" Click="buttonLogout_Click">
+                            <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Width="25" Height="25" Kind="Logout" DockPanel.Dock="Left"></materialDesign:PackIcon>
+                                <Label DockPanel.Dock="Top" Margin="35,0,0,0">Logout</Label>
+                            </DockPanel>
+                        </Button>
                         </DockPanel>
-                    </Button>
-                    <Separator Margin="0,10" DockPanel.Dock="Top"></Separator>
-                    <Button Width="250" Height="50" Name="buttonFindFriend" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonFindFriend_Click">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="AccountSearch" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <Label DockPanel.Dock="Top" Margin="35,0,0,0">Find Friends</Label>
-                        </DockPanel>
-                    </Button>
-                    <Button Width="250" Height="50" Name="buttonCreateNewChat" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="AccountMultiple" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <Label DockPanel.Dock="Top" Margin="35,0,0,0">New Group</Label>
-                        </DockPanel>
-                    </Button>
-                    <Button Width="250" Height="50" Name="buttonSettings" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonSettings_Click">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="Settings" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <Label DockPanel.Dock="Top" Margin="35,0,0,0">Settings</Label>
-                        </DockPanel>
-                    </Button>
-                    <Button Width="250" Height="50" Name="buttonNightMode" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Click="buttonNightMode_Click">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="WeatherNight" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <ToggleButton Name="toggleButtonNightMode" DockPanel.Dock="Right"></ToggleButton>
-                            <Label DockPanel.Dock="Left" Margin="35,0,0,0">Night Mode</Label>
-                        </DockPanel>
-                    </Button>
-                    <Button Width="250" Height="50" Name="buttonLogout" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Bottom" Click="buttonLogout_Click">
-                        <DockPanel Width="220" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <materialDesign:PackIcon Width="25" Height="25" Kind="Logout" DockPanel.Dock="Left"></materialDesign:PackIcon>
-                            <Label DockPanel.Dock="Top" Margin="35,0,0,0">Logout</Label>
-                        </DockPanel>
-                    </Button>
+                    </ScrollViewer>
                 </DockPanel>
             </DockPanel>
+                
             <DockPanel  x:Name="OverlayDockPanel" Grid.RowSpan="4" Grid.ColumnSpan="4" >
             </DockPanel>
         </Grid>
