--- a/ZaolisUI/Settings.xaml
+++ b/ZaolisUI/Settings.xaml
@@ -18,7 +18,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Border Grid.ColumnSpan="3" Grid.RowSpan="3" Background="Gray" Opacity="0.5" MouseLeftButtonUp="Border_MouseLeftButtonUp"></Border>
+            <Border Grid.ColumnSpan="3" Grid.RowSpan="3" Background="Gray" Opacity="0.3" MouseLeftButtonUp="Border_MouseLeftButtonUp"></Border>
             
             <DockPanel Grid.Column="1" Grid.Row="1" Background="White" >
                 <!--Button close-->
@@ -42,13 +42,13 @@
                     </DockPanel>
                     <!--Just a border-->
                     <!--Bio-->
-                    <DockPanel Margin="10,20,0,10" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="User" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
+                    <DockPanel Margin="10,20,10,10" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon Kind="User" Margin="5" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
                         <TextBox x:Name="nameTextBox" HorizontalAlignment="Center" MinWidth="200" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Name" FontSize="18" LostFocus="NameTextBox_LostFocus" Text="{Binding CurrentUser.Name}"></TextBox>
                     </DockPanel>
                     <!--Username-->
-                    <DockPanel Margin="10,10,0,10" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="At" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
+                    <DockPanel Margin="10" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon Kind="At" ToolTip="Information" DockPanel.Dock="Left" Margin="5" Foreground="#FF03A9F4" Width="25" Height="25"/>
                         <TextBox HorizontalAlignment="Center" MinWidth="200" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Username" FontSize="18"></TextBox>
                     </DockPanel>
                     <!--Just a border-->
@@ -56,8 +56,8 @@
                     <!--Bio-->
                     <DockPanel Margin="10,5,0,5" DockPanel.Dock="Top">
                         <TextBox x:Name="bioTextBox" Margin="10,0" MaxLength="70" TextWrapping="Wrap" MaxWidth="293" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" MaxHeight="75" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Bio" FontSize="18" LostFocus="TextBox_LostFocus" Text="{Binding CurrentUser.Bio}"></TextBox>
-                        <Label Margin="10,8,0,0" DockPanel.Dock="Top" FontSize="14">Any details such as age, occupation or city.</Label>
-                        <Label Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="14">Example: Test Automation Engineer, 19 y.o.</Label>
+                        <Label Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Any details such as age, occupation or city.</Label>
+                        <Label Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Example: Test Automation Engineer, 19 y.o.</Label>
                     </DockPanel>
                 </DockPanel>
             </DockPanel>
