--- a/ZaolisUI/Settings.xaml
+++ b/ZaolisUI/Settings.xaml
@@ -24,7 +24,7 @@
                 <!--Button close-->
                 <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
                     <Label Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">Settings</Label>
-                    <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" Click="buttonClose_Click" ></Button>
+                    <Button Name="buttonClose" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF2196F3" Width="30" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Content="{materialDesign:PackIcon Kind=Close, Size=25}" Click="buttonClose_Click" MouseEnter="buttonClose_MouseEnter" MouseLeave="buttonClose_MouseLeave" ></Button>
 
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
